bug squash on job details

--- a/src/app/my-jobs/components/job-details/job-details.component.css
+++ b/src/app/my-jobs/components/job-details/job-details.component.css
@@ -24,6 +24,20 @@
     display: inline-block;
 }
 
+.headInfoBar span {
+    margin-bottom: 0.4rem;
+}
+
+.quoteWarning {
+    white-space: pre;
+    display: inline-flex;
+}
+
+.quoteWarning p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .buttonLinks {
     width: 45rem;
     height: 2rem;
